--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,15 +7,29 @@ body {
     background-color: #F6F1F1;
 }
 
-p, h1, h2, h3, ul, ul li, ul li a {
-    font-family: 'Comfortaa', cursive;
+p, ul, ul li, ul li a {
+    font-size: 1.8vh;
+    line-height: 3.5vh;
+}
+
+h1, h2 {
+    font-family: Fairplay;
+}
+
+h1 {
+    font-size: 10vh;
+    font-weight: normal;
 }
 
 h2 {
     margin: 0;
-    line-height: 5vh;
+    font-size: 4vh;
+    font-weight: normal;
 }
 
+h3 {
+    font-weight: normal;
+}
 
 .headergrid {
     display: grid;
@@ -45,6 +59,7 @@ ul li a {
     margin: 0;
     color: black;
     padding-bottom: 1vh;
+    font-size: 2.5vh;
 }
 
 ul li a:hover {
@@ -159,7 +174,6 @@ ul li a:hover {
 
 .hello {
     position: absolute;
-    font-size: 10vh;
     z-index: 10;
     margin: 1vw 0 0 10vw;
 }
@@ -396,7 +410,7 @@ button:hover {
 .projekterinfocontainer p {
     text-align: left;
     line-height: 4vh;
-    margin: 20vh 40vh 0 40vh;
+    margin: 20vh 45vh 0 45vh;
 }
 
 .cardcontainerlesstopmargin {
@@ -412,7 +426,7 @@ button:hover {
     position: relative;
 }
 
-.tophvertprojekttext {
+.tophvertprojekttext  {
     grid-column: 1;
     margin-right: 50vh;
     margin: 12vh 10vw 10vh 10vw;
@@ -421,12 +435,14 @@ button:hover {
 .coloredyear {
     color: mediumpurple;
     margin-top: 0;
-    margin-bottom: 2vh;
+    margin-bottom: 4vh;
+    font-size: 3vh;
 }
 
-.tophvertprojekttext p {
+.tophvertprojekttext h1 {
     line-height: 4vh;
-    margin-top: 0;
+    margin: 0;
+    font-size: 4vh;
 }
 
 .tophvertprojektimg {
@@ -545,11 +561,10 @@ button:hover {
     top: 22vh;
 }
 
-h1 {
+.lær {
     position: absolute;
     left: 8%;
     top: 35vh;
-    font-family: 'Comfortaa', cursive;
     color: black;
     font-size: 5vh;
 }
